use some jsdom filter options

--- a/README.textile
+++ b/README.textile
@@ -1,4 +1,4 @@
-Feedability is written in javascript using the "v8 engine":http://code.google.com/p/v8/ and "node.js":http://nodejs.org/, it requires the "node-readability":https://github.com/arrix/node-readability and "node-expat":https://github.com/astro/node-expat libraries that can be installed using "npm":http://npmjs.org/. Feedability implements a small HTTP Server, you sent the feed you want to read just as a query string, so for instance: @http://127.0.0.1:1912/http://example.com/atom.xml@ The node.js server will download the feed and parse it for item links (article links), it will also remove any existing content excerpts. 
+Feedability is written in javascript using the "v8 engine":http://code.google.com/p/v8/ and "node.js":http://nodejs.org/, it requires the "node-readability":https://github.com/arrix/node-readability and "node-expat":https://github.com/astro/node-expat libraries. Feedability implements a small HTTP Server, you sent the feed you want to read just as a query string, so for instance: @http://127.0.0.1:1912/http://example.com/atom.xml@ The node.js server will download the feed and parse it for item links (article links), it will also remove any existing content excerpts. 
 Then it crawls all articles and uses readability to extract the content of the received pages. The original feed will be extended with the full-text of the articles and send to the user (the feed reader software). Feedability also supports filters based on "jquery":http://jquery.com/ "selectors":http://api.jquery.com/category/selectors/, if specified for the article url, the selected elements are removed from the page before readability runs. This can be used as a very easy to use workaround for specific sites when readability gets distracted by certain elements (like navigation or comment sections).
 
 h2. Installation
