--- a/TODO
+++ b/TODO
@@ -1,24 +1,23 @@
 Refactoring
 
-- use a library for flow control
 - testcases!
 
 Readability/Filters
 
-- readability returns: "Sorry, unable to parse article content. Please view 
-  the original page instead." if it was unable to parse it. Should detect
-  that and restore the original excerpt. (maybe keep the excerpt anyways)
+- detect if the full article text is present in excerpts using fuzzy matching
 - manage to use the readability dom tree for filtering
 
-Proxy
+Proxy/Server
 
+- support gzip content compression
+- support etag caching
 - detect images (and maybe other content) and download it locally so that the
   proxy can serve it from cache.
-- caching proxy that runs readability for text/html
+- run readability on text/html
 
 Cache
 
-- gzip the cache files (make generic api for that)
+- gzip the cache files
 
 Crawler
 
