--- a/README.textile
+++ b/README.textile
@@ -4,9 +4,7 @@ h1. Feedability
 
 h2. Installation
 
-Feedability is under heavy development, there is no release at the moment,
-but you can try the current development repository. You should expect
-problems, please report them back!
+There is no official release yet, feedability is still under heavy development. If you want to try the current development version, follow these installation instructions:
 
 * Install node.js using your distribution package manager or compile it from source. For detailed installation instructions consider the "node wiki":https://github.com/ry/node/wiki/: "Installation":https://github.com/ry/node/wiki/Installation.
 * Install "npm":http://npmjs.org/, the de-facto standard package manager for node: "README":https://github.com/isaacs/npm#readme with setup instructions.
@@ -53,7 +51,8 @@ open a browser and try: http://127.0.0.1:1912/
 
 </pre>
 
-* For more information on usage and internals visit the feedability wiki at github.
+* For more documentation visit the "wiki":https://github.com/4poc/feedability/wiki
+* Please report bugs!
 
 h2. Contact
 
