--- a/README.textile
+++ b/README.textile
@@ -1,12 +1,12 @@
 h1. Feedability
 
-"Feedability":https://github.com/4poc/feedability/ is a proxy server for atom and rss feeds that tries to make them more usable by including the full content of each article. It uses "arc90labs":http://lab.arc90.com/ original "readability":http://code.google.com/p/arc90labs-readability/, a client bookmarklet written in javascript, for main content extraction/information extraction. Feedability is written in "JavaScript":http://en.wikipedia.org/wiki/JavaScript using "googles v8 engine":http://code.google.com/p/v8/ and the networking framework "node.js":http://nodejs.org/, it furthermore depends on the "readability node.js library":https://github.com/arrix/node-readability written by "arrix":https://github.com/arrix, "node bindings":https://github.com/astro/node-expat for the fast "xml parser expat":http://expat.sourceforge.net/ written by "Astro":https://github.com/astro, "node bindings":https://github.com/bnoordhuis/node-iconv for the charset recoding library "iconv":http://www.gnu.org/software/libiconv/ written by "bnoordhuis":https://github.com/bnoordhuis, the "node compression":https://github.com/egorich239/node-compress library written by "egorich239":https://github.com/egorich239/ and the javascript library "jQuery":http://jquery.com/ developed by "The jQuery Project Team":http://jquery.org/team.
+"Feedability":https://github.com/4poc/feedability/ is a proxy server for atom and rss feeds that tries to make them more usable by including the full content of each article. It uses "arc90labs":http://lab.arc90.com/ original "readability":http://code.google.com/p/arc90labs-readability/, a client bookmarklet written in javascript, for main content extraction/information extraction. Feedability is using the networking framework "node.js":http://nodejs.org/, it furthermore depends on the "readability node.js library":https://github.com/arrix/node-readability by "arrix":https://github.com/arrix, "node bindings":https://github.com/astro/node-expat for the fast "xml parser expat":http://expat.sourceforge.net/ by "Astro":https://github.com/astro, "node bindings":https://github.com/bnoordhuis/node-iconv for the charset recoding library "iconv":http://www.gnu.org/software/libiconv/ by "bnoordhuis":https://github.com/bnoordhuis, the "node compression":https://github.com/sjmulder/node-compress library by "waveto":https://github.com/waveto/node-compress, "egorich239":https://github.com/egorich239/ and "sjmulder":https://github.com/sjmulder and "jQuery":http://jquery.com/ developed by "The jQuery Project Team":http://jquery.org/team.
 
 h2. Installation
 
-There is no official release yet, feedability is still under heavy development. If you want to try the current development version, follow these installation instructions:
+I will try to create a first release candidate soon, until now you need to use the master branch. Follow these installation instructions:
 
-* Install node.js using your distribution package manager or compile it from source. For detailed installation instructions consider the "node wiki":https://github.com/ry/node/wiki/: "Installation":https://github.com/ry/node/wiki/Installation.
+* Install node.js (0.4>) using your distribution package manager or compile it from source. For detailed installation instructions consider the "node wiki":https://github.com/ry/node/wiki/: "Installation":https://github.com/ry/node/wiki/Installation.
 * Install "npm":http://npmjs.org/, the de-facto standard package manager for node: "README":https://github.com/isaacs/npm#readme with setup instructions.
 * **or** if you using arch linux you can use the AUR packages "nodejs":http://aur.archlinux.org/packages.php?ID=32930 and "nodejs-npm":http://aur.archlinux.org/packages.php?ID=43626.
 * Run @node -v@ and @npm -v@ to make sure everything works, then, install the necessary depended libraries:
@@ -17,29 +17,33 @@ $ npm install node-expat
 $ npm install iconv
 </pre>
 
-* Currently the stable version of "node-compress":https://github.com/egorich239/node-compress is not availible as a npm package, you need to install the "v0-3-3-support":https://github.com/BrightTag/node-compress/tree/v0-3-3-support branch from BrightTag manually:
-
-<pre>
-$ git clone git://github.com/BrightTag/node-compress.git
-$ cd node-compress
-$ git checkout origin/v0-3-3-support
-$ npm install
-</pre>
-
 * To make sure node finds all depended libraries you can run:
 
 <pre>
 $ node
-> require('readability'); require('compress'); require('iconv'); require('node-expat');
+> require('readability'); require('iconv'); require('node-expat');
 </pre>
 
 If something is wrong you should see an error message like @"Error: Cannot find module '[missing library]'"@.
 
-* Clone and run the feedability development repository:
+* Clone the repository:
 
 <pre>
 $ git clone git://github.com/4poc/feedability.git
+</pre>
+
+* Unfortunately the node-compress library is not available via npm (only an old version) you either can install it manually or use the submodule (node_modules/compress):
+
+<pre>
 $ cd feedability
+$ git submodule update --init
+$ cd node_modules/compress
+$ sh build.sh
+</pre>
+
+* Run Feedability:
+
+<pre>
 $ node feedability.js
 Starting Feedability: NodeJS Feed Proxy With Readability
 
@@ -82,7 +86,7 @@ This program is distributed in the hope that it will be useful, but WITHOUT ANY 
 
 You should have received a copy of the GNU General Public License along with this program.  If not, see <"http://www.gnu.org/licenses/":http://www.gnu.org/licenses/>.
 
-h2. Alternatives
+h2. Similar Projects
 
 Here a few alternative services and projects that try to solve the same problem:
 
