--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 h1. Feedability
 
-"Feedability":https://github.com/4poc/feedability/ is a proxy server for atom and rss feeds that tries to make them more usable by including the full content of each article. It uses "arc90labs":http://lab.arc90.com/ original "readability":http://code.google.com/p/arc90labs-readability/, a client bookmarklet written in javascript, for main content extraction/information extraction. Feedability is using the networking framework "node.js":http://nodejs.org/, it furthermore depends on the "readability node.js library":https://github.com/arrix/node-readability by "arrix":https://github.com/arrix, "node bindings":https://github.com/astro/node-expat for the fast "xml parser expat":http://expat.sourceforge.net/ by "Astro":https://github.com/astro, "node bindings":https://github.com/bnoordhuis/node-iconv for the charset recoding library "iconv":http://www.gnu.org/software/libiconv/ by "bnoordhuis":https://github.com/bnoordhuis, the "node compression":https://github.com/sjmulder/node-compress library by "waveto":https://github.com/waveto/node-compress, "egorich239":https://github.com/egorich239/ and "sjmulder":https://github.com/sjmulder and "jQuery":http://jquery.com/ developed by "The jQuery Project Team":http://jquery.org/team.
+"Feedability":https://github.com/4poc/feedability/ is a proxy server for atom and rss feeds that tries to make them more usable by including the full content of each article. It uses "arc90labs":http://lab.arc90.com/ original "readability":http://code.google.com/p/arc90labs-readability/, a client bookmarklet written in javascript, for main content extraction/information extraction. Feedability is using the networking framework "node.js":http://nodejs.org/, it furthermore depends on the "readability node.js library":https://github.com/arrix/node-readability by "arrix":https://github.com/arrix, "node bindings":https://github.com/astro/node-expat for the fast "xml parser expat":http://expat.sourceforge.net/ by "Astro":https://github.com/astro, "node bindings":https://github.com/bnoordhuis/node-iconv for the charset recoding library "iconv":http://www.gnu.org/software/libiconv/ by "bnoordhuis":https://github.com/bnoordhuis, the "node compression":https://github.com/sjmulder/node-compress library by "waveto":https://github.com/waveto/node-compress, "egorich239":https://github.com/egorich239/ and "sjmulder":https://github.com/sjmulder, "jQuery":http://jquery.com/ developed by "The jQuery Project Team":http://jquery.org/team and "node-sqlite":https://github.com/orlandov/node-sqlite by "grumdrig":https://github.com/grumdrig and "orlandov":https://github.com/orlandov.
 
 h2. Installation
 
@@ -15,12 +15,12 @@ git submodule update --init
 cd node_modules/compress; sh build.sh; cd ../../
 </pre>
 
-* Install the required libraries:
+* Install the required libraries: (node-sqlite is optional, only necessary if you want to import firefox cookies)
 
 <pre>
-npm install readability node-expat iconv
+npm install readability node-expat iconv node-sqlite
 # OR globally:
-sudo npm install -g readability node-expat iconv
+sudo npm install -g readability node-expat iconv node-sqlite
 </pre>
 
 * To start the server: @node feedability.js@ ...
